# langchain_vs_llamaindex

./: README.md  pyproject.toml
notebooks/: langchain.ipynb  llamaindex.ipynb
