[tool.poetry]
name = "langchain-llamaindex"
version = "0.1.0"
description = ""
authors = ["Jefferson Qiu <jeffersonqiu1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
bs4 = "^0.0.2"
langchain = "^0.2.5"
langchain-community = "^0.2.5"
langchain-openai = "^0.1.9"
python-dotenv = "^1.0.1"
langchain-chroma = "^0.1.1"
llama-index = "^0.10.48.post1"
llama-index-readers-web = "^0.1.19"
llama-index-readers-file = "^0.1.25"
llama-index-vector-stores-chroma = "^0.1.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
